--- a/planding/package.json
+++ b/planding/package.json
@@ -2,19 +2,22 @@
   "name": "-planding",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "dev": "vite",
+    "format": "prettier --write src/",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
     "axios": "^1.7.2",
     "pinia": "^2.2.0",
+    "roboto-fontface": "*",
     "vue": "^3.4.29",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "vuetify": "npm:@vuetify/nightly@next",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
@@ -24,6 +27,9 @@
     "eslint-plugin-vue": "^9.23.0",
     "prettier": "^3.2.5",
     "sass": "^1.77.8",
-    "vite": "^5.3.1"
-  }
+    "vite": "^5.3.1",
+    "vite-plugin-vuetify": "^1.0.0-alpha.12",
+    "vue-cli-plugin-vuetify": "~2.5.8"
+  },
+  "type": "module"
 }
