--- a/planding/package.json
+++ b/planding/package.json
@@ -14,21 +14,21 @@
     "axios": "^1.7.2",
     "pinia": "^2.2.0",
     "roboto-fontface": "*",
-    "vue": "^3.4.29",
+    "vue": "^3.4.35",
     "vue-router": "^4.4.0",
-    "vuetify": "npm:@vuetify/nightly@next",
+    "vuetify": "^3.3.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
-    "@vitejs/plugin-vue": "^5.0.5",
+    "@vitejs/plugin-vue": "^4.6.2",
     "@vue/eslint-config-prettier": "^9.0.0",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "prettier": "^3.2.5",
     "sass": "^1.77.8",
-    "vite": "^5.3.1",
-    "vite-plugin-vuetify": "^1.0.0-alpha.12",
+    "vite": "^4.5.3",
+    "vite-plugin-vuetify": "^1.0.0",
     "vue-cli-plugin-vuetify": "~2.5.8"
   },
   "type": "module"
