--- a/planding/package.json
+++ b/planding/package.json
@@ -16,7 +16,6 @@
     "roboto-fontface": "*",
     "vue": "^3.4.35",
     "vue-router": "^4.4.0",
-    "vuetify": "^3.3.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
@@ -28,8 +27,9 @@
     "prettier": "^3.2.5",
     "sass": "^1.77.8",
     "vite": "^4.5.3",
-    "vite-plugin-vuetify": "^1.0.0",
-    "vue-cli-plugin-vuetify": "~2.5.8"
+    "vite-plugin-vuetify": "^1.0.2",
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "vuetify": "^3.6.14"
   },
   "type": "module"
 }
