--- a/planding/package.json
+++ b/planding/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.2",
     "pinia": "^2.2.0",
     "roboto-fontface": "*",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.4.35",
     "vue-router": "^4.4.0",
-    "webfontloader": "^1.0.0"
+    "webfontloader": "^1.0.0",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
