--- a/planding/package.json
+++ b/planding/package.json
@@ -13,6 +13,7 @@
     "@mdi/font": "5.9.55",
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.2",
+    "event-source-polyfill": "^1.0.31",
     "pinia": "^2.2.0",
     "roboto-fontface": "*",
     "sockjs-client": "^1.6.1",
